Document PPDG/src/objects/Weekly_Branch_Control_Log__c.object
<CustomObject>
    <fields>
        <fullName>ATM_Issues__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>ATM Issues 
Weekly update to senior manager in charge of branches
1) No Incidents
2) Days of Downtime
3) Date resolved</inlineHelpText>
        <label>ATM Issues</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATM_captured_cards_destroyed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>ATM captured cards destroyed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Clear__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All Clear</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_checks_carried_out__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>All checks carried out</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <formula>Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Branch_Control_Log2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attached__c</fullName>
        <label>Attached</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Branch_name__c</fullName>
        <globalPicklist>Branch_name</globalPicklist>
        <label>Branch name</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Check_Kiosk__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Check kiosk is turned on and working and stocked with paper.
Report any issue to IT immediately via SFDC.</inlineHelpText>
        <label>Check Kiosk</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comment_box__c</fullName>
        <label>Comment box</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_by1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Branch_Control_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Weekly_Branch_Control_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date3__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Checked1__c</fullName>
        <label>Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Checked2__c</fullName>
        <label>Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Checked3__c</fullName>
        <label>Date Checked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_resolved__c</fullName>
        <label>Date resolved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_of_downtime__c</fullName>
        <label>Days of downtime</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Details_of_test_actions_found__c</fullName>
        <label>Details of test/ actions found</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evidence_of_cash_check_sheet_signed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Evidence of cash check sheet signed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCU_KYC_and_Senior_management_informed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>FCU, KYC and Senior management informed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Findings_Comments1__c</fullName>
        <label>Findings-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Findings_Comments2__c</fullName>
        <label>Findings-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Findings_Comments__c</fullName>
        <label>Findings-Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fire_alarm_point_tested_location__c</fullName>
        <label>Fire alarm point tested location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fire_exits_free_from_obstruction__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Fire exits free from obstruction</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_till_balance_checked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>The check should be performed randomly, so that it does not become predictable.</inlineHelpText>
        <label>Full till balance checked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_no_comments10__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments11__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_comments12__c</fullName>
        <label>If no comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Issues_resolved__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Issues resolved</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missed_by__c</fullName>
        <label>Missed by</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_days_down__c</fullName>
        <label>Number days down</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_incidents__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Number of incidents</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PA_tested__c</fullName>
        <label>PA tested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PEP_High_Risk_and_High_worth_account__c</fullName>
        <label>PEP, High Risk and High worth account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_to__c</fullName>
        <label>Reported to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signature_photos_checked_withdrawal__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Signature/ photos checked withdrawal</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signatures_on_deposits__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Signatures on deposits</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signed_and_filled_by_team__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Signed and filled by team</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_fire_alarm__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Test fire alarm
(test a different point each week)
Note in comments box the date of test.</inlineHelpText>
        <label>Test fire alarm</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_fire_alarm_point__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Test fire alarm point</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_personal_alarms__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Test Personal alarms
(test a different alarm each week).
Note on the BCL the date of test.</inlineHelpText>
        <label>Test personal alarms</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_number_of_cards__c</fullName>
        <label>Total number of cards</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tuesday_Cascade_printed_signed__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Tuesday Cascade printed/ signed</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Updated</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wed_training_register_updated_on_SF__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Wed training register updated on SF</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Working_and_Stocked__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <label>Working and Stocked</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X15_transactions_checked_per_cashier__c</fullName>
        <globalPicklist>Yes_No_NA</globalPicklist>
        <inlineHelpText>Dockets Checking
Manager/ Deputy Manager to check a minimum of 15 transactions per cashier to ensure:
Breakdowns on all cash transactions
Signatures and photos checked on withdrawals
Signatures on deposits

Record details of the test, actions found.</inlineHelpText>
        <label>15 transactions checked per cashier</label>
        <type>Picklist</type>
    </fields>
    <label>Weekly Branch Control Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Weekly Branch Control Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Branch Control Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>